--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Fallout Terminal Inspired Style</title>
+  <title>RustyOaks - Rust Servers</title>
+      <meta content="RustyOaks - Rust Servers" property="og:title" />
+    <meta content="RustyOaks is a new server chain in rust dedicated to providing a userfriendly experience while keeping the true vanilla feeling to rust that we all love." property="og:description" />
+    <meta content="https://www.rustyoaks.ml/" property="og:url" />
+    <meta content="https://i.ibb.co/MNbf4Ft/dsf2ewdv.png" property="og:image" />
+    <meta content="#43B581" data-react-helmet="true" name="theme-color" />
+  <link rel="icon" type="image/x-icon" href="https://i.ibb.co/MNbf4Ft/dsf2ewdv.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 <link rel="stylesheet" href="./style.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
@@ -30,7 +36,7 @@
 
     <nav class="site clear">
       <ul>
-        <li><a href="#" title="">Join Discord</a></li>
+        <li><a href="https://discord.gg/EAcjsYBvbU" title="">Join Discord</a></li>
         <li><a href="#" title="">Visit Store</a></li>
         <li><a href="#" title="">Visit Youtube</a></li>
       </ul>
