--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 <link rel="stylesheet" href="./style.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
-<iframe style="display: none;" width="560" height="315" src="https://www.youtube.com/watch?v=EICyYJ-2IR4?rel=0&autoplay=1" frameborder="0"></iframe>
+<iframe class="music" width="560" height="315" src="https://www.youtube.com/watch?v=EICyYJ-2IR4?rel=0&autoplay=1" frameborder="0"></iframe>
 </head>
 <body>
 <!-- partial:index.partial.html -->
