--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 <link rel="stylesheet" href="./style.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
-<iframe class="music" width="560" height="315" src="https://www.youtube.com/watch?v=EICyYJ-2IR4?rel=0&autoplay=1" frameborder="0"></iframe>
+<div id="music"><embed src="fishvillagemusic.mp3" autostart=true loop=true></div>
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -37,7 +37,7 @@
     <nav class="site clear">
       <ul>
         <li><a href="https://discord.gg/EAcjsYBvbU" title="">Join Discord</a></li>
-        <li><a href="#" title="">Visit Store</a></li>
+        <li><a href="https://rustyoaks-store.tebex.io/" title="">Visit Store</a></li>
         <li><a href="#" title="">Visit Youtube</a></li>
       </ul>
     </nav>
