--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 <link rel="stylesheet" href="./style.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
-<audio loop autoplay>
-    <source src="fishvillagemusic.mp3" type="audio/filetype">
-</audio>
+<audio autoplay loop src="fishvillagemusic.mp3"></audio>
 </head>
 <body>
 <!-- partial:index.partial.html -->
