--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 <link rel="stylesheet" href="./style.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
-<audio autoplay loop src="fishvillagemusic.mp3"></audio>
+<embed src="fishvillagemusic.mp3" loop="true" autostart="true" width="2" height="0">
 </head>
 <body>
 <!-- partial:index.partial.html -->
