--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 <link rel="stylesheet" href="./style.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
-<embed src="/fishvillagemusic.mp3" loop="true" autostart="true" width="2" height="0">
+<audio autoplay loop>
+  <source src="/fishvillagemusic.mp3" type="audio/mp3">
+ </audio>
 </head>
 <body>
 <!-- partial:index.partial.html -->
