--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p>----------------------------------------</p>
         <p>RUSTYOAKS - US 2x MINI</p>
         <p>WIPES EVERY MONDAY @ 2:30 PM ET</p>
-        <p>- RELEASING SOON -</p>
+        <p>- RELEASING THIS MONDAY -</p>
       </div>
     </header>
 
